[tool.poetry]
name = "httpstan"
version = "4.11.0"
description = "HTTP-based interface to Stan, a package for Bayesian inference."
authors = [
  "Allen Riddell <riddella@indiana.edu>",
  "Ari Hartikainen <ahartikainen@users.noreply.github.com>",
  "Matthew Carter <m.j.carter2@liverpool.ac.uk>",
]
license = "ISC"
readme = "README.rst"
homepage = "https://mc-stan.org"
repository = "https://github.com/stan-dev/httpstan"
documentation = "https://httpstan.readthedocs.io"
build = "build.py"

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: ISC License (ISCL)",
]
# include: poetry automatically excludes paths mentioned in .gitignore, selectively add back
include = [
  "httpstan/*.o",
  "httpstan/*.cpp",
  "httpstan/lib/libsundials*",
  "httpstan/lib/libtbb*",
  "httpstan/stanc",
  "httpstan/include/**/*",
  "doc/openapi.yaml",
]

[tool.poetry.dependencies]
python = "^3.7"
setuptools = ">=48.0"
aiohttp = "^3.7"
appdirs = "^1.4"
webargs = "^8.0"
marshmallow = "^3.10"
numpy = "^1.19"

#[tool.poetry.group.test]  # This part can be left out
#optional = true

[tool.poetry.group.test.dependencies]
pytest = { version = "6.2.5", python = "^3.6"}
pytest-asyncio = { version = "0.15.1", python = "^3.6"}
apispec = { version = "4.7.1", extras = ["yaml", "validation"], python = "^3.7"}
openapi-spec-validator = { version = "0.5.7", extras = ["osv"], python = "^3.7"}
prance = {version = "0.22.11.4", extras = ["osv"], markers = "extra == \"validation\"", python = "^3.7"}
#PyYAML = {version = "5.1", extras=["yaml"], python = "<3.7"}
#packaging = {version = "21.3", python = "<3.7"}
#sphinx-rtd-theme = { version = "1.3.0", python = "^3.6"}

[tool.poetry.group.dev.dependencies]
apispec = { version = "4.7.1", extras = ["yaml", "validation"], python = "^3.6"}
openapi-spec-validator = { version = "0.5.7", extras = ["osv"], python = "^3.7"}
prance = {version = "0.22.11.4", extras = ["osv"], markers = "extra == \"validation\"", python = "<3.7"}
#PyYAML = {version = "5.1", extras=["yaml"], python = "<3.7"}
#packaging = {version = "21.3", python = "<3.7"}
autoflake = { version = "1.7.8", python = "^3.6"}
black = { version = "22.3.0", python = "^3.6"}
isort = { version = "5.12.0", python = "^3.8"}
mypy = { version = "0.981", python = "^3.6"}
flake8 = { version = "3.9.2", python = "^3.6"}
# documentation
# NOTE: when changing these, update docs-requirements.txt
sphinx = { version = "4.5.0", python = "^3.6"}
sphinx-autoapi = { version = "1.9.0", python = "^3.6"}
sphinx-rtd-theme = { version = "1.3.0", python = "^3.6"}
sphinxcontrib-openapi = { version = "0.8.1", python = "^3.6"}
jsonschema = { version = "4.17.3", python = "^3.6"}   # newer versions break sphinxcontrib-openapi
sphinxcontrib-redoc = { version = "1.6.0", python = "^3.6"}

[tool.black]
line-length = 119
exclude = 'httpstan/include'

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "httpstan,tests"
known_local_folder = "helpers"
skip_glob = ['httpstan/include/*']

[tool.coverage.run]
branch = true
omit = ["httpstan/__main__.py"]

[tool.coverage.report]
fail_under = 20

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
